tests/baselines/reference/infiniteExpansionCaching.errors.txt
tests/cases/conformance/types/typeRelationships/recursiveTypes/infiniteExpansionCaching.ts(27,1): error TS2322: Type 'D<number>' is not assignable to type 'C<string>'.
  Types of property 'q' are incompatible.
    Type 'number' is not assignable to type 'string'.


==== tests/cases/conformance/types/typeRelationships/recursiveTypes/infiniteExpansionCaching.ts (1 errors) ====
    interface A<T> {
        p: A<C<T>>;
        s: C<T>;
    }
    
    interface B<U> {
        p: B<D<U>>;
        s: D<U>;
    }
    
    interface C<T> {
        q: T;
    }
    
    interface D<U> {
        q: U;
    }
    
    var a: A<C<string>>;
    var b: B<D<number>>;
    
    a = b;
    
    var c: C<string>;
    var d: D<number>;
    
    c = d; // Should not be allowed
    ~
!!! error TS2322: Type 'D<number>' is not assignable to type 'C<string>'.
!!! error TS2322:   Types of property 'q' are incompatible.
!!! error TS2322:     Type 'number' is not assignable to type 'string'.